syntax = "proto3";
option java_multiple_files = true;
option go_package = "github.com/somnath67643/aurora-sizing/clientgo/baseproto";
package org.anonymous.grpc;

import "cmd_get_many_by_name.proto";

service ObjService {
	rpc get_object_many_by_name(CmdGetManyByName) returns (CmdGetManyByNameResponse);
}
